--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
 									<a class="image fit"><img src="images/NG.jpeg" width="500" 
 										height="300" class="resize" alt="1" /></a>
 									<p>Timeseries analysis to forecast natural gas prices for non-household consumers in Germany for 2025-2026<br />
-									utilizing machine learning modeling.<br />
-									</p>
+									utilizing machine learning modeling.<br /></p>
 									<ul class="actions special">
 										<li><a href="https://github.com/mhshehata/NG_price_prediction" target="_blank" class="button large">View Project</a></li>
 									</ul>
