--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
 									<p>Timeseries analysis to forecast natural gas prices for non-household consumers in Germany for 2025-2026<br />
 									utilizing machine learning modeling.<br /></p>
 									<ul class="actions special">
-										<li><a href="https://github.com/mhshehata/NG_price_prediction" target="_blank" class="button large">View Project</a></li>
+										<li><a href="https://github.com/mhshehata/NG_price_prediction" target="_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
 
 								<article>
 									<header>
-										<h3>National Hydrogen<br />
+										<h3>National Hydrogen<br/>
 										Strategy - Germany 2030</a></h3>
 									</header>
 									<a class="image fit"><img src="images/H2.jpg" width="500" 
@@ -71,7 +71,7 @@
 
 								<article>
 									<header>
-										<h3>Inspecting Electric Vehicle Charging Trends<br />
+										<h3>Inspecting Electric Vehicle Charging Trends<br/>
 										</a></h3>
 									</header>
 									<a class="image fit"><img src="images/ev_charging.png" width="500" 
@@ -84,7 +84,7 @@
 
 								<article>
 									<header>
-										<h3>Tesla Stock Price Prediction using Facebook Prophet<br />
+										<h3>Tesla Stock Price Prediction using Facebook Prophet<br/>
 										</a></h3>
 									</header>
 									<a class="image fit"><img src="images/front_pic.jpeg" width="500" 
