--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
 								<article>
 									<header>
-										<h3>Tesla Stock Price Prediction using Facebook Prophet<br/>
+										<h3>Tesla Stock Price Prediction using Facebook Prophet Model<br/>
 										</a></h3>
 									</header>
 									<a class="image fit"><img src="images/front_pic.jpeg" width="500" 
