--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body class="is-preload">
 
 		<!-- Wrapper -->
-			<div id="wrapper">
+			<div id="wrapper" class="active">
 
 				<!-- Intro -->
 					<div id="intro">
