--- a/index.html
+++ b/index.html
@@ -89,6 +89,19 @@
 										<li><a href="https://github.com/mhshehata/Tesla_stock_price_prediction_using_Facebook_Prophet/tree/main" target="_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
+
+								<article>
+									<header>
+										<h3>Customers Segmentation Using K-Means Clsutering<br/>
+										</a></h3>
+									</header>
+									<a class="image fit"><img src="images/front_pic.jpeg" width="500" 
+										height="300" alt="" /></a>
+									<p>Design a loyalty program for the TravelTide app that offers personalized perks based on customer segmentation to enhance engagement and retention.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/mhshehata/Tesla_stock_price_prediction_using_Facebook_Prophet/tree/main" target="_blank" class="button">View Project</a></li>
+									</ul>
+								</article>
 							</section>
 					</div>
 
