--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
 
 								<article>
 									<header>
-										<h3>Customers Segmentation Using K-Means Clsutering<br/>
+										<h3>Customers Segmentation Using K-Means Clustering<br/>
 										</a></h3>
 									</header>
-									<a class="image fit"><img src="images/front_pic.jpeg" width="500" 
+									<a class="image fit"><img src="images/logo.png" width="500" 
 										height="300" alt="" /></a>
 									<p>Design a loyalty program for the TravelTide app that offers personalized perks based on customer segmentation to enhance engagement and retention.</p>
 									<ul class="actions special">
