--- a/index.html
+++ b/index.html
@@ -95,8 +95,7 @@
 										<h3>Customers Segmentation Using K-Means Clustering<br/>
 										</a></h3>
 									</header>
-									<a class="image fit"><img src="images/logo.png" width="500" 
-										height="300" alt="" /></a>
+									<a class="image fit"><img src="images/logo.png" alt="" /></a>
 									<p>Design a loyalty program for the TravelTide app that offers personalized perks based on customer segmentation to enhance engagement and retention.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/mhshehata/Tesla_stock_price_prediction_using_Facebook_Prophet/tree/main" target="_blank" class="button">View Project</a></li>
