--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 										<h3>Customers Segmentation Using K-Means Clustering<br/>
 										</a></h3>
 									</header>
-									<a class="image fit"><img src="images/world.png" width="500" 
+									<a class="image fit"><img src="images/world.jpeg" width="500" 
 										height="300" alt="" /></a>
 									<p>Design a loyalty program for the TravelTide app that offers personalized perks based on customer segmentation to enhance engagement and retention.</p>
 									<ul class="actions special">
