--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 								<article>
 									<header>
-										<h3>Customers Segmentation Using K-Means Clustering<br/>
+										<h3>Customers Segmentation Using K-Means Clustering Model<br/>
 										</a></h3>
 									</header>
 									<a class="image fit"><img src="images/world.jpeg" width="500" 
