--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 									</header>
 									<a class="image fit"><img src="images/world.jpeg" width="500" 
 										height="300" alt="" /></a>
-									<p>Design a loyalty program for the TravelTide app that offers personalized perks <br />
-										based on customer segmentation to enhance engagement and retention.</p>
+									<p>Design a loyalty program for the TravelTide app that offers personalized perks based on customer <br />
+									segmentation to enhance engagement and retention.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/mhshehata/TravelTide-Customer-Segmentation-Perks-Assignment" target="_blank" class="button">View Project</a></li>
 									</ul>
