--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<div id="wrapper" class="active">
 
 				<!-- Intro -->
-					<div id="intro">
+					<div id="intro" style="display: block; visibility: visible; opacity: 1;">
 						<h2>Mohamed Shehata<br</h2>
 						</p>
 						<i><h2>Energy & Data Analytics Portfolio<h2></i>
